--- a/about.html
+++ b/about.html
@@ -60,10 +60,10 @@
                 <li class="box-label">...</li>
                 
                 <li><a href="index.html">Intro</a></li>
-                <li><a href="about.html">About me</a> <i class="ion-ios-circle-filled color"></i></li>
-                <li><a href="contact.html">contact me</a></li>
+                <li><a href="about.html">About us</a> <i class="ion-ios-circle-filled color"></i></li>
+                <li><a href="contact.html">contact us</a></li>
 
-                <li class="box-label">Follow me</li>
+                <li class="box-label">Join Us.. if you 💗 coding!</li>
 
             </ul>
         </nav>
